--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -62,3 +62,9 @@ button {
 button:hover {
   background-color: #3b8d99;
 }
+
+footer {
+  color: #2c3e50;
+  font-size: 14px;
+  margin-top: 20px;
+}
